[gd_scene load_steps=11 format=2]

[ext_resource path="res://actors/Astromouse/star_mouse.gd" type="Script" id=1]
[ext_resource path="res://actors/Astromouse/starmouse.png" type="Texture" id=2]
[ext_resource path="res://actors/Astromouse/mask.png" type="Texture" id=3]
[ext_resource path="res://take_five_sax.ogg" type="AudioStream" id=4]
[ext_resource path="res://actors/Astromouse/SFX.tscn" type="PackedScene" id=5]


[sub_resource type="Animation" id=1]

resource_name = "blink"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Mask:visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 35.4751

[node name="StarMouse" type="KinematicBody2D" groups=[
"starmouse",
]]

z_index = 2
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
max_speed = 800.0
max_force = 0.07
slowing_radius = 200.0

[node name="Sprite" type="Sprite" parent="."]

scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Mask" type="Light2D" parent="Sprite"]

visible = false
enabled = true
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 3
range_height = 0.0
range_z_min = 2
range_z_max = 3
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow_item_cull_mask = 1

[node name="Animator" type="AnimationPlayer" parent="Sprite"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/blink = SubResource( 1 )
playback_active = true
playback_speed = 0.5
blend_times = [  ]
autoplay = ""

[node name="Area" type="Area2D" parent="." groups=[
"player",
]]

input_pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Shape" type="CollisionShape2D" parent="Area"]

visible = false
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[node name="Sax" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 4 )
playing = false
loop = true
volume_db = -4.0
autoplay = true
paused = false
loop_offset = 7.17
buffering_msec = 500

[node name="SFX" parent="." instance=ExtResource( 5 )]


[connection signal="animation_finished" from="Sprite/Animator" to="." method="_on_animator_finished" binds=[  ]]

[connection signal="area_entered" from="Area" to="." method="_on_body_enter" binds=[  ]]

[connection signal="body_entered" from="Area" to="." method="_on_body_enter" binds=[  ]]

[connection signal="timeout" from="Timer" to="." method="_on_timeout" binds=[  ]]
